--- a/index.css
+++ b/index.css
@@ -144,3 +144,15 @@
   margin-bottom: 50px;
   line-height: 1.6em;
 }
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
